examples/invalid/unknown_option.sals
-x 5
-y 4
-d uniform
-i 10000
-u

13-6  14-2 10-7
12-4  11-8  9-3
